fixed heading spacing

--- a/site.css
+++ b/site.css
@@ -39,8 +39,7 @@ nav li a:hover {
     background-color: orange;
 }
 
-
 p { margin-top: 1em; margin-bottom: 1em; }
-h1 { font-size: 2em; clear: both; }
-h2 { font-size: 1.5em; }
+h1 { font-size: 2em; padding: 0.5em 0;}
+h2 { font-size: 1.5em; padding: 0.5em 0.5em 0;}
 h3 { font-size: 1.2em; }
